2010-10-22  François Sausset  <sausset@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        Fix wrong xHeight() value for Apple Symbols font.
        https://bugs.webkit.org/show_bug.cgi?id=41535

        * mathml/xHeight.xhtml: Added.
        * platform/mac/mathml/presentation/fenced-expected.checksum:
        * platform/mac/mathml/presentation/fenced-expected.png:
        * platform/mac/mathml/presentation/fenced-expected.txt:
        * platform/mac/mathml/presentation/row-alignment-expected.checksum:
        * platform/mac/mathml/presentation/row-alignment-expected.png:
        * platform/mac/mathml/presentation/row-alignment-expected.txt:
        * platform/mac/mathml/presentation/tables-expected.checksum:
        * platform/mac/mathml/presentation/tables-expected.png:
        * platform/mac/mathml/presentation/tables-expected.txt:
        * platform/mac/mathml/xHeight-expected.checksum: Added.
        * platform/mac/mathml/xHeight-expected.png: Added.
        * platform/mac/mathml/xHeight-expected.txt: Added.
2010-10-22  François Sausset  <sausset@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        Fix wrong xHeight() value for Apple Symbols font.
        https://bugs.webkit.org/show_bug.cgi?id=41535

        Test: mathml/xHeight.xhtml

        * platform/graphics/mac/SimpleFontDataMac.mm:
        (WebCore::SimpleFontData::platformInit):

Canonical link: https://commits.webkit.org/60855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70304 268f45cc-cd09-0410-ab3c-d52691b4dbfc